fix auth path in openapi spec
